--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="./index.css">
-<script src="./index.js"></script>
 <title>Momentum</title>
 </head>
 <body>
     <div class="js-clock">
         <h1 class="js-title">00:00</h1>
     </div>
+    <script src="./clock.js"></script>
 </body>
 </html>
