--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="js-clock">
-        <h1 class="js-title">00:00</h1>
+        <h1 class="js-title"></h1>
     </div>
     <form class="js-form form">
         <input type="text" placeholder="What is your name?">
@@ -21,6 +21,7 @@
     </form>
     <ul class="js-toDoList">
     </ul>
+    <span class="js-weather"></span>
 
     <script src="./clock.js"></script>
     <script src="./greeting.js"></script>
