--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h4 class="js-greetings greetings"></h4>
 
     <form class="js-toDoForm">
-        <input type="text" placeholder="Write a To Do">
+        <input type="text" placeholder="What is your main focus for today?">
     </form>
     <ul class="js-toDoList">
     </ul>
